--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						</div>
 
 						<ul class="links">
-							<li><a target="_blank" href="https://github.com/ranbeioc/tina/archive/master.zip"><i class="fa fa-github"></i> Sous</a></li>
+							<li><a target="_blank" href="https://github.com/ranbeioc/tina/"><i class="fa fa-github"></i> Sous</a></li>
 							<li><a target="_blank" href="https://skyfire.gitbooks.io/tina/content/"><i class="fa fa-book"></i> Docs</a></li>
 							<li><a target="_blank" href="http://www.processon.com/team/invite/530b13310cf2fe02622e280d/JjwDRRpJ"><i class="fa fa-cog"></i> Flows</a></li>
 							<li><a target="_blank" href="https://account.teambition.com/login"><i class="fa fa-tumblr"></i> WBS</a></li>
